create MongoDB-Mongock-Spring simple project

--- a/mdb-spring-boot/src/main/resources/application.properties
+++ b/mdb-spring-boot/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-spring.data.mongodb.uri=mongodb+srv://<username>:<pwd>@<cluster>.mongodb.net/mygrocerylist
+spring.data.mongodb.uri=mongodb://localhost:27017/mygrocerylist
 spring.data.mongodb.database=mygrocerylist
+
+mongo-db.uri: mongodb://localhost:27017/mygrocerylist
+mongock.runner-type=initializingbean
+#mongock.migration-scan-package= com.example.mdbspringboot.MdbSpringBootApplication
+mongock.change-logs-scan-package=com.example.mdbspringboot.config
+
+
+#spring.liquibase.change-log=classpath:db/changelog/changelog.xml
